make the footer bar fixed even on mobile

--- a/src/components/Director/TournamentBuilder/TournamentBuilder.module.scss
+++ b/src/components/Director/TournamentBuilder/TournamentBuilder.module.scss
@@ -1,38 +1,34 @@
 .TournamentBuilder {
   .Progress {
     .Step {
-      h6 {
-        font-weight: 100;
-        .Text {
-          margin-left: 0.75rem;
-        }
+      padding: 0.5rem 0;
+      text-align: center;
+      i {
+        font-size: 1.5rem;
       }
+    }
+    .StepText {
+      font-size: 1.2rem;
+      font-weight: 100;
+      text-align: center;
+      padding: 1rem 0;
     }
     .Done {
       background-color: var(--tournio-gray-400);
-      h6::before {
-        font-family: 'Bootstrap-icons';
-        content: '\F270';
-      }
     }
     .Active {
       background-color: #d1f9d3;
-      h6::before {
-        font-family: 'Bootstrap-icons';
-        content: '\F138';
-      }
-
+      border-bottom: none;
     }
     .Upcoming {
       background-color: var(--tournio-gray-100);
-      h6::before {
-        font-family: 'Bootstrap-icons';
-        content: '\F2E4';
-      }
     }
   }
 
   .FormContainer {
+    h2 {
+      display: none;
+    }
     .FieldRow,
     fieldset {
       margin-top: 1rem;
@@ -89,11 +85,21 @@
 
     .Progress {
       .Step {
+        text-align: left;
         border: 1px dotted;
         border-bottom: none;
         h6 {
           padding: 1rem 0;
           margin: 0 0 0 1rem;
+          .Text {
+            margin-left: 0.75rem;
+            text-decoration: none;
+          }
+          .Text:hover,
+          .Text:active,
+          .Text:focus {
+            text-decoration: underline;
+          }
         }
       }
       .Step:first-child {
@@ -104,19 +110,30 @@
         border-radius: 0 0 5px 5px;
       }
       .Done {
+        h6::before {
+          font-family: 'Bootstrap-icons';
+          content: '\F270';
+        }
 
       }
       .Active {
-
+        h6::before {
+          font-family: 'Bootstrap-icons';
+          content: '\F138';
+        }
       }
       .Upcoming {
-
+        h6::before {
+          font-family: 'Bootstrap-icons';
+          content: '\F2E4';
+        }
       }
     }
 
     .FormContainer {
       h2 {
-        margin-bottom: 2rem;
+        display: block;
+        margin-bottom: 1.5rem;
       }
       label {
       }
