--- a/src/components/Layout/DirectorLayout/Navigation.module.scss
+++ b/src/components/Layout/DirectorLayout/Navigation.module.scss
@@ -1,5 +1,4 @@
 .Navigation {
-  padding-bottom: 1rem;
   .BrandWrapper {
     margin-left: 0.5rem;
     // Might make this the inverted IO on small devices...
@@ -10,14 +9,9 @@
       padding: 0;
     }
   }
-  //@media (min-width: 768px) {
-  //  .BrandWrapper {
-  //    background: url('../../../images/tournio-logo-inverted.png') no-repeat left center;
-  //    background-size: contain;
-  //    .Brand {
-  //      margin: 0;
-  //      padding: 0;
-  //    }
-  //  }
-  //}
+}
+@media (min-width: 576px) {
+  .Navigation {
+    padding-bottom: 1rem;
+  }
 }
