--- a/src/components/Layout/FrontLayout/Footer.module.scss
+++ b/src/components/Layout/FrontLayout/Footer.module.scss
@@ -1,5 +1,5 @@
 .Footer {
-  line-height: 1rem;
+  line-height: 1.5rem;
 
   .Element {
     padding-left: 0.5rem;
