--- a/src/components/Layout/FrontLayout/FrontLayout.module.scss
+++ b/src/components/Layout/FrontLayout/FrontLayout.module.scss
@@ -15,6 +15,15 @@
   h5 { font-size: 1.1rem; }
   h6 { font-size: 1rem; }
 
+  main {
+    margin-bottom: 6rem;
+  }
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%
+  }
+
   @media (min-width: 576px) {
     h1 {
       font-size: 1.75rem;
@@ -36,11 +45,6 @@
     h6 { font-size: 1.3rem; }
     main {
       margin-bottom: 5rem;
-    }
-    footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%
     }
   }
 }
